fixed border issue on firefox

--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -32,10 +32,9 @@ body{
 }
 
 .search input{
-  border: 2px;
-  border-style: groove;
+  outline: none;
+  border: none;
   background-color:  rgba(255,255,255,0.125);
-  border-color: black;
   height: 30px;
   width: 40%;
   border-radius: 7px;
